--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 Flask==3.0.3
 google-auth==2.32.0
 google-auth-oauthlib==1.2.1
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.7
 openai==0.28.0
 gunicorn==20.1.0
-SQLAlchemy==2.0.31
+supabase==1.0.3
